@@ -1,0 +1,5 @@
+all: ModuleStar
+
+ModuleStar:
+	g++ ModuleStar.cpp -o ModuleStar
+
